# random-laser-pointer

./: Cargo.toml  ESP32_v1_design.md  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
assets/: wiring-min.png:Zone.Identifier  wiring.png:Zone.Identifier
src/: main.rs
